z-index bug
fixin teh bugz

--- a/Haxlet2_1/scoreboard/scoreboardcss.css
+++ b/Haxlet2_1/scoreboard/scoreboardcss.css
@@ -34,6 +34,7 @@
 	border-radius:10px;
 	box-shadow:0px 1px 10px rgba(0,0,0,0.7);
 	position:relative;
+	z-index:1;
 }
 #scorebottom {
 	width:520px;
